--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "perfect-scrollbar": "1.4.0",
     "react": "^16.4.0",
     "react-chartist": "^0.13.1",
+    "react-dialog": "^1.0.2",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
