--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-scripts": "1.1.4",
     "react-swipeable-views": "0.12.13",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
