--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
+    "dateformat": "^3.0.3",
     "npm-run-all": "4.1.3",
     "perfect-scrollbar": "1.4.0",
     "react": "^16.4.0",
