--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/history": "^4.6.2",
     "@types/react-router-redux": "^5.0.15",
     "ajv": "6.5.1",
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
@@ -18,6 +19,7 @@
     "npm-run-all": "4.1.3",
     "perfect-scrollbar": "1.4.0",
     "react": "^16.4.0",
+    "react-autosuggest": "^9.3.4",
     "react-chartist": "^0.13.1",
     "react-dialog": "^1.0.2",
     "react-dom": "^16.4.0",
